Fix navigation narrow style

--- a/components/navigation.module.scss
+++ b/components/navigation.module.scss
@@ -12,6 +12,7 @@
 .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .icon {
